--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Memory Game!</h1>
+    <button class="start">Start Game</button>
     <div id="game">
     </div>
     <script src="script.js"></script>
