--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Memory Game!</h1>
-    <button class="start">Start Game</button>
+    <div>
+      <button class="start">Start Game</button>
+      <p id="score" class="hidden">Tries: 0, Completed Pairs: 0</p>
+    </div>
     <div id="game">
     </div>
     <script src="script.js"></script>
