--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Memory Game!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>Memory Game!</h1>
@@ -13,6 +13,6 @@
     </div>
     <div id="game">
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
