updated to track and display best score and persist to local storage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Memory Game!</h1>
     <div>
       <button class="start">Start Game</button>
-      <p id="score" class="hidden">Tries: 0, Completed Pairs: 0</p>
+      <p id="score" class="hidden"></p>
     </div>
     <div id="game">
     </div>
